syntax = "proto3";
package warden.intent;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "warden/intent/intent.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/intent/types";

message Approver {
  // address is the address of the approver
  string address = 1;
  // approved_at is a timestamp specifying when the approver approved an action
  google.protobuf.Timestamp approved_at = 2
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
}

// Action wraps a message that needs to be approved by a set of approvers.
message Action {
  uint64 id = 1;
  repeated Approver approvers = 2;
  ActionStatus status = 3;
  // Original message that started the action, it will be executed when the
  // intent is satisfied.
  google.protobuf.Any msg = 5;
  // Result of the action, it will be set when the action is completed.
  google.protobuf.Any result = 6;
  string creator = 7;
  // TimeoutHeight is the block height up until this action can be executed.
  uint64 timeout_height = 8;
  // created_at is a timestamp specifying when the action was created
  google.protobuf.Timestamp created_at = 9
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  // updated_at is a timestamp specifying when the action's status was updated
  google.protobuf.Timestamp updated_at = 10
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  // intent is the intent that this action is associated with. Instead of
  // storing the intent ID, we store the entire intent object so that is
  // immutable and cannot be changed later.
  intent.Intent intent = 11 [(gogoproto.nullable) = false];
  // mentions is a list of addresses that are mentioned in the intent.
  repeated string mentions = 12;
}

// MsgActionCreated is returned by rpc that creates an action.
message MsgActionCreated {
  Action action = 1;
}

// Current status of an action.
enum ActionStatus {
  // Unspecified status.
  ACTION_STATUS_UNSPECIFIED = 0;

  // Action is pending approval. This is the initial status.
  ACTION_STATUS_PENDING = 1;

  // Intent has been satified, action has been executed.
  ACTION_STATUS_COMPLETED = 2;

  // Action has been revoked by its creator.
  ACTION_STATUS_REVOKED = 3;

  // Action has been rejected since TimeoutHeight has been reached.
  ACTION_STATUS_TIMEOUT = 4;
}
